<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escenario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="itsfcp.isc.edu.Hourhand.ResumenActivity"
    tools:showIn="@layout/app_bar_resumen">

    <TextView
        android:id="@+id/txt_hoy"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:text="@string/textView3"
        android:textColor="@color/colorAccent1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="MissingConstraints" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/fecha_hoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:hint="dd/mm/aaaa"
            android:textColor="#131212"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/calendario"
            android:layout_width="21dp"
            android:layout_height="22dp"
            android:layout_alignTop="@+id/fecha_hoy"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:src="@drawable/calendario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111" />

    </RelativeLayout>


    <TextView
        android:id="@+id/txt_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_InfoGeneral"
        android:layout_alignStart="@+id/txt_hoy"
        android:layout_alignLeft="@+id/txt_hoy"
        android:fontFamily="roboto"
        android:text="@string/txt_entrada"
        android:textColor="@color/entrada_salida"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_hora_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_entrada"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/hora_entrada"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toEndOf="@+id/txt_entrada"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_hora_salida"
        android:layout_alignStart="@+id/txt_entrada"
        android:layout_alignLeft="@+id/txt_entrada"
        android:fontFamily="roboto"
        android:text="@string/txt_salida"
        android:textColor="@color/entrada_salida"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_hora_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_hora_entrada"
        android:layout_alignLeft="@+id/txt_hora_entrada"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="62dp"
        android:hint="@string/hora_salida"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/txt_salida"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/txt_InfoGeneral"
        android:layout_width="304dp"
        android:layout_height="255dp"
        android:layout_below="@+id/txt_hoy"
        android:layout_centerHorizontal="true"
        android:background="@color/info_general"
        android:backgroundTint="#3839b98a"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="MissingConstraints" />



        <ImageView
            android:id="@+id/sinagendas"
            android:layout_width="131dp"
            android:layout_height="112dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="129dp"
            android:layout_marginLeft="129dp"
            android:layout_marginTop="187dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:layout_marginBottom="212dp"
            android:src="@drawable/sinagendas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/txt_sinpendientes"
        android:layout_width="120sp"
        android:layout_height="25sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="8dp"
        android:text="Sin pendientes"
        android:textColor="#151414"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sinagendas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.938" />


</android.support.constraint.ConstraintLayout>
